--- a/src/components/projects/Projects.module.scss
+++ b/src/components/projects/Projects.module.scss
@@ -6,24 +6,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  background: linear-gradient(white 18%, #3363FF08 18% 100%);
 
   @include for-size(xxl) {
-    margin-top: $defaultVerticalDistanceVw
+    margin-top: $defaultVerticalDistanceVw;
   }
-
-  //@include for-size(xxl) {
-  //  margin-top: $defaultVerticalDistanceVw;
-  //}
-
-  @include for-size(xl) {
-    background: linear-gradient(white 15%, #3363FF08 15% 100%);
-  }
-
-  @include for-size(l) {
-    background: linear-gradient(white 14%, #3363FF08 14% 100%);
-  }
-  
 
   .content {
     margin: 0 8.4375vw;
