--- a/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
+++ b/src/components/projects/components/open-banking-api/OpenBankingApi.module.scss
@@ -1,15 +1,10 @@
 @import "src/variables";
 
 .container {
-  margin: $defaultVerticalDistancePx 0 0;
   max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  @include for-size(xxl) {
-    margin-top: $defaultVerticalDistanceVw;
-  }
 
   @include for-size(xl) {
     padding-bottom: 7vw;
@@ -48,20 +43,27 @@
       margin-top: 4.166vw;
     }
 
+
     @include for-size(l) {
+      flex-direction: column;
       gap: 0;
     }
 
     &__image {
-      min-height: 340px;
+      min-width: 450px;
 
-      @include for-size(xl) {
-        height: 41.78vw;
+      @include for-size(xxl) {
+        width: 33.28125vw;
       }
+
     }
 
     &__content {
       max-width: 794px;
+
+      @include for-size(l) {
+        max-width: unset;
+      }
 
 
       &__header {
@@ -70,6 +72,10 @@
         font-weight: 500;
         line-height: 48px;
         margin-bottom: 32px;
+
+        @include for-size(l) {
+          text-align: center;
+        }
       }
 
 
