--- a/src/components/shared/info-cards/InfoCards.module.scss
+++ b/src/components/shared/info-cards/InfoCards.module.scss
@@ -5,22 +5,19 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  gap: 30px;
 
   @include for-size(xxl) {
     margin-top: $defaultVerticalDistanceVw;
   }
 
-
-  .content {
-    margin: 0 8.4375vw;
-    max-width: $maxCiteWidthPx;
-    width: 100%;
-  }
-
   .header {
     @include h1();
+    line-height: 58px;
     text-align: center;
     margin-bottom: 80px;
+    color: white;
   }
 
   .info-cards-info {
