--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -2,18 +2,13 @@
 
 .container {
   width: 100%;
-  background: #1C1C1C;
-  margin-top: $defaultVerticalDistancePx;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  @include for-size(xxl) {
-    margin-top: $defaultVerticalDistanceVw;
-  }
-
   @mixin common-block-params() {
     width: 100%;
+    margin-top: $defaultVerticalDistancePx;
     display: flex;
     padding-bottom: 50px;
 
@@ -25,13 +20,15 @@
 
   .common-info {
     @include common-block-params();
-    margin: 100px 8.4375vw 0;
+    margin-top: $defaultVerticalDistancePx;
+    width: 81.25vw;
+    max-width: $maxCiteWidthPx;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid #262626;
+    border-bottom: 1px solid #D8D8D8;
 
     @include for-size(xxl) {
-      margin-top: 5.2vw;
+      margin-top: 7.8125vw;
     }
 
     &__navigation {
@@ -44,11 +41,12 @@
       }
 
       &__link {
-        font-family: Roboto;
+        font-family: 'Rubik';
         font-size: 18px;
         font-weight: 400;
         line-height: 27px;
-        color: #E4E4E7;
+        text-align: left;
+        color: #161C2D;
 
         &:hover {
           cursor: pointer;
@@ -59,8 +57,10 @@
 
   .contacts {
     @include common-block-params();
-    margin: 50px 8.4375vw 0;
-    border-bottom: 1px solid #262626;
+    margin-top: 50px;
+    width: 81.25vw;
+    max-width: $maxCiteWidthPx;
+    border-bottom: 1px solid #D8D8D8;
     justify-content: center;
     gap: 20px;
 
@@ -71,12 +71,12 @@
     @mixin item-base() {
       display: flex;
       align-items: center;
-      font-family: 'Roboto';
+      font-family: Rubik;
       font-size: 18px;
       font-weight: 400;
       line-height: 27px;
       text-align: left;
-      color: #E4E4E7;
+      color: #161C2D;
       text-decoration: none;
       gap: 6px;
     }
@@ -96,29 +96,27 @@
   .organization-info {
     @include common-block-params();
     justify-content: center;
+    margin-top: 50px;
+    width: 81.25vw;
+    max-width: $maxCiteWidthPx;
+
+    @include for-size(xxl) {
+      margin-top: 2.6vw;
+    }
 
     &__content {
       display: flex;
       justify-content: center;
       width: 100%;
-      margin: 50px 8.4375vw 0;
 
-      @include for-size(xxl) {
-        margin-top: 2.6vw;
-      }
 
       &__requisites {
         width: 100%;
         max-width: 1596px;
         padding: 16px 30px;
-        border-radius: 100px;
-        border: 1px solid #262626;
-        background: #1A1A1A;
-
-
 
         &__item {
-          font-family: 'Roboto';
+          font-family: 'Rubik';
           font-size: 18px;
           font-weight: 300;
           line-height: 27px;
