--- a/src/components/main/components/header/Header.module.scss
+++ b/src/components/main/components/header/Header.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 83.125vw;
+    width: $maxContentWidthVw;
     max-width: $maxCiteWidthPx;
 
 
