--- a/src/variables.scss
+++ b/src/variables.scss
@@ -5,6 +5,7 @@ $defaultVerticalDistanceVw: 7.8125vw;
 $minifiedVerticalDistance: 50px;
 $defaultHorizontalDistance: 162px;
 $minifiedHorizontalDistance: 15px;
+$maxContentWidthVw: 83.125vw;
 
 
 $mainHeader1FontSize: 48px;
