--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -21,7 +21,7 @@
   .common-info {
     @include common-block-params();
     margin-top: $defaultVerticalDistancePx;
-    width: 83.125vw;
+    width: $maxContentWidthVw;
     max-width: $maxCiteWidthPx;
     flex-direction: column;
     align-items: center;
@@ -97,7 +97,7 @@
     @include common-block-params();
     justify-content: center;
     margin-top: 50px;
-    width: 83.125vw;
+    width: $maxContentWidthVw;
     max-width: $maxCiteWidthPx;
 
     @include for-size(xxl) {
