--- a/src/components/how-to-start/HowToStart.module.scss
+++ b/src/components/how-to-start/HowToStart.module.scss
@@ -8,7 +8,7 @@
     .info {
       max-width: $maxCiteWidthPx;
       align-items: center;
-      width: 83.125vw;
+      width: $maxContentWidthVw;
       display: flex;
       flex-direction: column;
 
