--- a/src/components/interface-example/InterfaceExample.module.scss
+++ b/src/components/interface-example/InterfaceExample.module.scss
@@ -23,7 +23,7 @@
   .content {
     margin: 0 8.4375vw;
     max-width: $maxCiteWidthPx;
-    width: 83.125vw;
+    width: $maxContentWidthVw;
     display: flex;
     justify-content: space-between;
     gap: 20px;
