--- a/src/components/get-consultation/components/ErrorModal.module.scss
+++ b/src/components/get-consultation/components/ErrorModal.module.scss
@@ -2,22 +2,27 @@
 
 .container {
   background-color: white;
-  width: 35vw;
+  width: 40vw;
   border-radius: 5px;
 
   .title {
     padding: 0.8rem;
     font-size: 24px;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid black;
     text-align: center;
     color: black;
-    font-family: Roboto;
+    font-family: 'Montserrat';
+    font-size: 32px;
     font-weight: 500;
   }
 
   .info {
-    padding: 1rem;
-    color: #656567;
+    font-family: Rubik;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    text-align: center;
+    padding: 0.8rem 1.2rem;
     font-size: 18px;
   }
 
@@ -34,7 +39,7 @@
 }
 
 .hidden {
- @include closeModal();
+  @include closeModal();
 }
 
 
