--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -22,7 +22,6 @@
 
   .common-info {
     @include common-block-params();
-    margin-top: $defaultVerticalDistancePx;
     flex-direction: column;
     align-items: center;
     border-bottom: 1px solid #D8D8D8;
@@ -66,10 +65,10 @@
       margin-top: 2.6vw;
     }
 
-    @mixin item-base() {
+    &__item {
       display: flex;
       align-items: center;
-      font-family: Rubik;
+      font-family: 'Rubik';
       font-size: 18px;
       font-weight: 400;
       line-height: 27px;
@@ -77,13 +76,9 @@
       color: #161C2D;
       text-decoration: none;
       gap: 6px;
-    }
-
-    &__item {
-      @include item-base();
 
       &_non-clickable {
-        @include item-base();
+
         &:hover {
           cursor: unset;
         }
